# BioMate

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  Dockerfile  Makefile  Makefile.help  README.md  docker-compose.yml  fastrewind.excalidraw  index.html  mkdocs.yml  pyproject.toml  requirements.txt  search.html  singularity.def
assets/: compare_results.sh
blabber/: index.html
dirstruct/: index.html
docs/: README.md  blabber.md  dirstruct.md  fastrewind.md  index.md  indexer.md  nspector.md  strainer.md
fastrewind/: index.html
indexer/: index.html
nspector/: index.html
search/: search_index.json
src/biofun/: __init__.py
src/biofun/dirstruct/: __init__.py  dirstruct.py
src/biofun/index/: __init__.py  indexing.py
src/biomate/: __init__.py  setup.py
src/biomate/blabber/: __init__.py  blabber.py
src/biomate/dirstruct/: __init__.py  dirstruct.py
src/biomate/fastrewind/: __init__.py  fastrewind.py
src/biomate/index/: __init__.py  index.py  indexing.py
src/biomate/nspector/: __init__.py  nspector.py
src/biomate/strainer/: __init__.py  strainer.py
strainer/: index.html
tests/: conftest.py  test_blabber.py  test_dirstruct.py  test_fastrewind.py  test_index.py  test_nspector.py  test_strainer.py
