[project]
name = "biomate"
version = "0.1.0"
description = "Add your description here"
readme = "docs/README.md"
authors = [
    { name = "Federico Agostini", email = "federico.agostini@scilifelab.se" }
]
requires-python = ">=3.12"
dependencies = [
    "dnaio>=1.2.3",
    "numpy>=2.3.0",
    "polars>=1.30.0",
    "regex>=2024.11.6",
    "rich>=14.0.0",
]

[project.scripts]
biomate = "biomate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "biopython>=1.85",
    "ipykernel>=6.30.1",
    "ipython>=9.4.0",
    "ipywidgets>=8.1.7",
    "pandas>=2.3.1",
    "pyarrow>=21.0.0",
    "ruff>=0.11.11",
]
docs = [
    "mkdocs>=1.6.1",
]
