[project]
name = "biomate"
version = "0.3.0"
description = "A collection of scripts and utility tools for everyday processing of biological data"
readme = "docs/README.md"
authors = [
    { name = "Federico Agostini", email = "federico.agostini@scilifelab.se" }
]
requires-python = ">=3.12"
dependencies = [
    "altair[all]>=6.1.0",
    "dnaio>=1.2.3",
    "fastavro>=1.12.0",
    "jellyfish>=1.2.1",
    "numpy>=2.3.0",
    "polars>=1.30.0",
    "regex>=2024.11.6",
    "rich>=14.0.0",
]

[project.scripts]
biomate = "biomate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "biopython>=1.85",
    "ipykernel>=6.30.1",
    "ipython>=9.4.0",
    "ipywidgets>=8.1.7",
    "pandas>=2.3.1",
    "pyarrow>=21.0.0",
    "interrogate==1.7.0",
    "ruff>=0.11.11",
    "commitizen>=4.13.9",
    "vega>=4.1.0",
]
docs = [
    "mkdocs>=1.6.1",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
